force-app/main/default/objects/TestCustomObject__c/TestCustomObject__c.object-meta.xml
<CustomObject>
    <description>Test Object for exercises</description>
    <label>TestCustomObject</label>
    <nameField>
        <label>TestCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>