force-app/main/default/objects/TestCustomObject__c/fields/NumberValue__c.field-meta.xml
<CustomField>
    <fullName>NumberValue__c</fullName>
    <description>Test number value</description>
    <label>NumberValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>