force-app/main/default/objects/TestCustomObject__c/fields/TestCheckboxValue__c.field-meta.xml
<CustomField>
    <fullName>TestCheckboxValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestCheckboxValue</label>
    <type>Checkbox</type>
</CustomField>