force-app/main/default/objects/TestCustomObject__c/fields/TestPicklistValue__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistValue__c</fullName>
    <label>TestPicklistValue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FirstOption</fullName>
            </value>
            <value>
                <fullName>SecondOption</fullName>
            </value>
            <value>
                <fullName>ThirdOption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>